# ops-resolver

./: .cursorignore  .dockerignore  .gitignore  .gitlab-ci.yml  PydanticAI_vs_DSPy_Assessment.md  dspy_code.md  dspy_code_client.md  litellm_llms_vertex_ai.md  llms-full.txt  main_dspy.py  md_to_pdf.py  pyproject.toml  react_ai_k8s_analyst.md
.cursor/rules/: ai-models.mdc  think.mdc
src/: main.py  main_dspy.py  main_dspy_prompt.py  main_pydanticai.py  tool_gcloud_log_agent_filter.py  tool_shell.py
