[project]
name = "k8s-react-ai"
version = "0.1.0"
description = "A ReAct AI to analyze GCP and Kubernetes clusters."
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "google-generativeai",
    "python-dotenv",
    "pydantic-ai",
    "dspy>=3.0.0.b3",
    "google-cloud-logging"
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.17.0",
    "pytest",
    "ruff>=0.12.5",
    "types-Pygments",
] 
